2008-07-04  Michael Natterer  <mitch@imendio.com>

	Bug 541208 – Functions to easily install and use signals without
	class struct slot

	* tests/gobject/override.c: added tests for the new gsignal
	overriding and chaining APIs.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Better endianness fix. From Tomas Mraz.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-07-02  Colin Walters  <walters@redhat.com>

	* gio/gcontenttype.c: Use UNLOCK to unlock, not LOCK.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add a check for structfs.f_bavail

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmain.c (g_get_current_time): Add a g_return_val_if_fail
	check in both versions. Proposed by Patrik Olsson in bug 540545.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Workaround AC_C_BIGENDIAN breakage in autoconf 2.61.
	Add a _cv_ to some variable names, since autoconf wants it.

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/pcre_compile.c: Apply fix for CVE-2008-2371 to
	fix a heap-based buffer overflow.

2008-06-29  Björn Lindqvist  <bjourne@gmail.com>

	Bug 539626 – Update docstrings for g_object_freeze_notify and
	g_object_thaw_notify

	* gobject/gobject.c: Explain how the freeze count works.

2008-06-26  Cody Russell  <bratsche@gnome.org>

	* configure.in: Add #define GLIB_USING_SYSTEM_PRINTF
	to glibconfig.h, which specifies if GLib is using
	the system printf functions for g_print*().
	(#539999, by Tim-Philipp Müller)

2008-06-24  Paolo Borelli  <pborelli@katamail.com>

	Bug 539770 - migrate gstrfunc unit tests to gtest

	* tests/strfunc-test.c:
	* tests/testglib.c:
	* tests/strtoll-test.c:
	* tests/strtod-test.c:
	* tests/string-test.c:
	* tests/Makefile.am:
	Removed old tests.

	* glib/tests/fileutils.c:
	* glib/tests/strfuncs.c:
	* glib/tests/Makefile.am: